# sync-clipboard-tauri

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pubspec.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: auto-build.yml  commit-build.yml  release.yml  trigger-cnb.yml
android/app/: build.gradle.kts
lib/: main.dart
lib/constants/: paths.dart
lib/dio/: sync_clipboard_client.dart
lib/page/: config_page.dart  debug_page.dart  home_page.dart  main_page.dart  share_upload_page.dart  tile_page.dart
lib/router/: app_router.dart
lib/service/: update_service.dart
lib/widget/: update_dialog.dart
plugins-workspace/: package.json  pnpm-lock.yaml
plugins-workspace/.changes/: deep-link-fix-different-exec.md  feat-clipboard-android-html-support.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BottomNavigation.vue
src/entities/: clipboard-data.ts
src/router/: router.ts
src/services/: clipboard-service.ts
src/types/: global.d.ts
src/utils/: settings.ts
tauri-plugin-quicktile/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-quicktile/android/: .gitignore  build.gradle.kts
tauri-plugin-quicktile/guest-js/: index.ts
tauri-plugin-quicktile/permissions/: default.toml
tauri-plugin-quicktile/src/: commands.rs  lib.rs  mobile.rs  (+1 more)
tauri-plugin-sharetarget/: Cargo.toml  build.rs  pnpm-lock.yaml
(+52 files in other folders)
